refactor: Sonar cleanup, part 2